namespaces/cloud-platform-live-0.k8s.integration.dsd.io/reference-app-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reference-app-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "digital"
    cloud-platform.justice.gov.uk/application: "reference-app"
    cloud-platform.justice.gov.uk/owner: "cloud-platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-reference-app"
